fix format for image rows on mobile

--- a/src/scss/sections/components/image.scss
+++ b/src/scss/sections/components/image.scss
@@ -73,10 +73,15 @@
       display: flex;
       align-items: center;
 
+      @media (max-width: $screen-sm) {
+        width: calc(100% - var(--thumbnail-width) - 50px);
+      }
+
       .image-text {
         display: inline-block;
         width: calc(var(--sidebar-width) - var(--thumbnail-width) - 140px);
         font-size: 12px;
+        flex-grow: 1;
 
         .image-name {
           font-weight: bold;
